--- a/css/app.css
+++ b/css/app.css
@@ -54,9 +54,13 @@ html, body, #map {
   text-align: center;
 }
 
-#splash button {
+button {
   border: none;
   outline: none;
+  cursor: pointer;
+}
+
+#splash button {
   width: 100%;
   height: 44px;
   background: #a72726;
@@ -67,6 +71,21 @@ html, body, #map {
   border-radius: 7px;
   margin: 23px 0 0 0;
 }
+
+#splash button:hover {
+  background: #971716;
+}
+
+#logo-button {
+  display: none;
+  position: absolute;
+  bottom: 0; left: 0;
+  z-index: 999;
+  background: transparent;
+}
+
+#logo-button img { position: relative; }
+#logo-button:hover img { bottom: 2px; }
 
 div.error {
   position: absolute;
