Overlay text updates

--- a/css/app.css
+++ b/css/app.css
@@ -10,7 +10,6 @@ html, body, #map {
 }
 
 #overlay {
-    display: none;
     position: absolute;
     top: 0; right: 0; bottom: 0; left: 0;
     height: 100%;
@@ -37,6 +36,10 @@ html, body, #map {
     -moz-box-shadow:        2px 3px 5px rgba(0,0,0,.5);
     -webkit-box-shadow: 2px 3px 5px rgba(0,0,0,.5);
     box-shadow:                 2px 3px 5px rgba(0,0,0,.5);
+}
+
+#splash a {
+    color: white;
 }
 
 #splash .scroller {
